[gd_scene load_steps=9 format=3 uid="uid://pvlyoc257p2t"]

[ext_resource type="Script" path="res://scenes/table/table.gd" id="1_bfs5a"]
[ext_resource type="Texture2D" uid="uid://dsk5mum376ltk" path="res://assets/cards/card_back.png" id="1_by4l8"]
[ext_resource type="Script" path="res://scenes/table/CardDeck.gd" id="2_j87sl"]
[ext_resource type="Script" path="res://scenes/table/QuitButton.gd" id="3_6p6ps"]
[ext_resource type="Script" path="res://scenes/table/DeckButton.gd" id="3_jde0q"]
[ext_resource type="Script" path="res://scenes/table/RestartButton.gd" id="5_7e85a"]
[ext_resource type="AudioStream" uid="uid://etsxjfjdnsey" path="res://audio/Battle.ogg" id="5_tixjw"]
[ext_resource type="Script" path="res://scenes/table/SettleButton.gd" id="6_y52vj"]

[node name="Table" type="CanvasLayer"]
script = ExtResource("1_bfs5a")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.564706, 0.145098, 1)

[node name="CardDeck" type="Area2D" parent="."]
script = ExtResource("2_j87sl")

[node name="Sprite2D" type="Sprite2D" parent="CardDeck"]
z_index = 1
position = Vector2(150, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_by4l8")

[node name="DeckButton" type="Button" parent="."]
offset_left = 79.0
offset_top = 450.0
offset_right = 199.0
offset_bottom = 510.0
text = "抽牌"
script = ExtResource("3_jde0q")

[node name="RestartButton" type="Button" parent="."]
offset_left = 80.0
offset_top = 530.0
offset_right = 200.0
offset_bottom = 590.0
text = "重开"
script = ExtResource("5_7e85a")

[node name="SettleButton" type="Button" parent="."]
custom_minimum_size = Vector2(120, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -30.0
offset_right = 60.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "结算"
script = ExtResource("6_y52vj")

[node name="QuitButton" type="Button" parent="."]
offset_left = 80.0
offset_top = 610.0
offset_right = 200.0
offset_bottom = 670.0
text = "离开"
script = ExtResource("3_6p6ps")

[node name="PlayerScoreDisplay" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2
vertical_alignment = 2

[node name="PlayerHand" type="Node2D" parent="."]

[node name="Card1" type="Sprite2D" parent="PlayerHand"]

[node name="Card2" type="Sprite2D" parent="PlayerHand"]

[node name="Card3" type="Sprite2D" parent="PlayerHand"]

[node name="Card4" type="Sprite2D" parent="PlayerHand"]

[node name="Card5" type="Sprite2D" parent="PlayerHand"]

[node name="Battle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tixjw")
volume_db = -10.0

[node name="CardDisplay" type="Sprite2D" parent="."]
position = Vector2(350, 260)

[node name="EnemyHand" type="Node2D" parent="."]

[node name="Card1" type="Sprite2D" parent="EnemyHand"]

[node name="Card2" type="Sprite2D" parent="EnemyHand"]

[node name="Card3" type="Sprite2D" parent="EnemyHand"]

[node name="Card4" type="Sprite2D" parent="EnemyHand"]

[node name="Card5" type="Sprite2D" parent="EnemyHand"]
